# audiopipe

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/antirez-asr-sys/: Cargo.toml  build.rs
crates/antirez-asr-sys/compat/: dirent.h  pthread.h  qwen_asr_audio_win.c  unistd.h  win_compat.h
crates/antirez-asr-sys/compat/sys/: mman.h  sysctl.h  time.h
crates/antirez-asr-sys/src/: lib.rs
crates/qwen3-asr-sys/: Cargo.toml  build.rs
crates/qwen3-asr-sys/src/: lib.rs
examples/: bench_batch.rs  bench_context_bias.rs  benchmark.rs  context_bias_demo.rs  convert_to_bf16.rs  mlx_stream_leak_probe.rs  parity_check.rs  test_decoder_kv_mlprogram.rs  test_ggml.rs  transcribe.rs  verify_v2_mlx.rs
qwen3-asr-sys/: build.rs  wrapper.cpp  wrapper.h
qwen3-asr-sys/cmake/: arm64-windows-msvc-clang.toolchain.cmake
qwen3-asr-sys/compat/: unistd.h
qwen3-asr-sys/compat/sys/: mman.h
scripts/: convert_fp16.py  export_decoder_kv.py  export_qwen_asr.py  fix_coreml_compat.py  test_e2e.py  validate_export.py
src/: audio.rs  context_bias.rs  error.rs  hf_cache.rs  lib.rs  model.rs  parakeet.rs  qwen3_asr.rs  qwen3_asr_antirez.rs  qwen3_asr_ggml.rs  whisper.rs
src/parakeet_mlx/: attention.rs  audio.rs  conformer.rs  decode.rs  mod.rs  rnnt.rs
tests/: bench_coreml.rs  gpu_sync_stress.rs  hf_download.rs  parakeet_streaming.rs  test_coreml.rs  test_decoder_kv_mlprogram.rs  test_e2e.rs  test_ggml.rs  test_parakeet_mlx.rs
